--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <string name="app_name">Counter</string>
+    <string name="app_name">CounterDroid</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="add_counter">Ajouter compteur</string>
@@ -34,4 +33,6 @@
 	<string name="exportXMLInProgress">Exportation en cours</string>
 	<string name="import_xml">Importer</string>
 	<string name="importXMLInProgress">Importation en cours</string>
+	<string name="choose_file">Veuillez choisir le fichier pour l\'importation (ExportCounterDroid_AAAADDMM_HHmmss.xml) </string>
+	<string name="choose_directory">Veuillez choisir le répertoire pour l\'exportation </string>
 </resources>
